src/http_parser/http11_parser.cpp

#line 1 "src/http_parser/http11_parser.rl"
#include "http11_parser.h"
#include <cstring>


#line 8 "src/http_parser/http11_parser.cpp"
static const int http_parser_start = 1;
static const int http_parser_first_final = 107;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 94 "src/http_parser/http11_parser.rl"


bool parse_http_request(char const* data, size_t len, HttpRequest* result) {
    int cs; // current state
    const char* p {data}; // current position
    const char* pe {data + len}; // end position
    const char* eof {pe}; // EOF position

    HttpRequest ctx_storage {};
    HttpRequest* ctx {&ctx_storage};

    // a mark for substring extraction
    const char* mark = nullptr;
    
    
#line 32 "src/http_parser/http11_parser.cpp"
	{
	cs = http_parser_start;
	}

#line 109 "src/http_parser/http11_parser.rl"
    
#line 39 "src/http_parser/http11_parser.cpp"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 68: goto tr0;
		case 71: goto tr2;
		case 72: goto tr3;
		case 79: goto tr4;
		case 80: goto tr5;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
tr0:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 67 "src/http_parser/http11_parser.cpp"
	if ( (*p) == 69 )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 76 )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 69 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 84 )
		goto st6;
	goto st0;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 69 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto tr11;
	goto st0;
tr11:
#line 16 "src/http_parser/http11_parser.rl"
	{
  ctx->method.assign(mark, p - mark);
}
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 116 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr12;
		case 33: goto tr13;
		case 37: goto tr14;
		case 47: goto tr15;
		case 58: goto tr16;
		case 61: goto tr13;
		case 64: goto st26;
		case 95: goto tr13;
		case 126: goto tr13;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr13;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr18;
	} else
		goto tr18;
	goto st0;
tr12:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st9;
tr30:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st9;
tr56:
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st9;
tr64:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st9;
tr72:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st9;
tr80:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 28 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.fragment.assign(mark, p - mark);
}
	goto st9;
tr83:
#line 28 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.fragment.assign(mark, p - mark);
}
	goto st9;
tr133:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 217 "src/http_parser/http11_parser.cpp"
	if ( (*p) == 72 )
		goto st10;
	goto st0;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	if ( (*p) == 84 )
		goto st11;
	goto st0;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	if ( (*p) == 84 )
		goto st12;
	goto st0;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	if ( (*p) == 80 )
		goto st13;
	goto st0;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	if ( (*p) == 47 )
		goto st14;
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr24;
	goto st0;
tr24:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 266 "src/http_parser/http11_parser.cpp"
	if ( (*p) == 46 )
		goto st16;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st15;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st17;
	goto st0;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
	if ( (*p) == 13 )
		goto tr28;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st17;
	goto st0;
tr28:
#line 12 "src/http_parser/http11_parser.rl"
	{
  ctx->version.assign(mark, p - mark);
}
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
#line 298 "src/http_parser/http11_parser.cpp"
	if ( (*p) == 10 )
		goto st107;
	goto st0;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
	goto st107;
tr13:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
#line 317 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st19;
		case 37: goto st20;
		case 58: goto tr33;
		case 61: goto st19;
		case 64: goto st26;
		case 95: goto st19;
		case 126: goto st19;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st19;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st19;
		} else if ( (*p) >= 65 )
			goto st19;
	} else
		goto st19;
	goto st0;
tr14:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
#line 350 "src/http_parser/http11_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st21;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st21;
	} else
		goto st21;
	goto st0;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st19;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st19;
	} else
		goto st19;
	goto st0;
tr16:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st22;
tr33:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
#line 393 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st36;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	switch( (*p) ) {
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st25;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st25;
	} else
		goto st25;
	goto st0;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st23;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st23;
	} else
		goto st23;
	goto st0;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	switch( (*p) ) {
		case 32: goto tr12;
		case 33: goto tr39;
		case 37: goto tr40;
		case 58: goto tr41;
		case 61: goto tr39;
		case 95: goto tr39;
		case 126: goto tr39;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto tr39;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto tr39;
		} else if ( (*p) >= 65 )
			goto tr39;
	} else
		goto tr39;
	goto st0;
tr39:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st27;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
#line 502 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st27;
		case 37: goto st28;
		case 58: goto tr44;
		case 61: goto st27;
		case 95: goto st27;
		case 126: goto st27;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st27;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st27;
		} else if ( (*p) >= 65 )
			goto st27;
	} else
		goto st27;
	goto st0;
tr40:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st28;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
#line 534 "src/http_parser/http11_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st29;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st29;
	} else
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st27;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st27;
	} else
		goto st27;
	goto st0;
tr41:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st30;
tr44:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st30;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
#line 577 "src/http_parser/http11_parser.cpp"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st32;
	goto st0;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st35;
	goto st0;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	if ( (*p) == 32 )
		goto st9;
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	switch( (*p) ) {
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st37;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	switch( (*p) ) {
		case 32: goto st9;
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st38;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	switch( (*p) ) {
		case 32: goto st9;
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st39;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
	switch( (*p) ) {
		case 32: goto st9;
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st40;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	switch( (*p) ) {
		case 32: goto st9;
		case 33: goto st23;
		case 37: goto st24;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
tr15:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
#line 768 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr56;
		case 33: goto st42;
		case 37: goto st43;
		case 61: goto st42;
		case 95: goto st42;
		case 126: goto st42;
	}
	if ( (*p) < 48 ) {
		if ( 36 <= (*p) && (*p) <= 46 )
			goto st42;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st42;
		} else if ( (*p) >= 64 )
			goto st42;
	} else
		goto st42;
	goto st0;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	switch( (*p) ) {
		case 32: goto tr56;
		case 33: goto st42;
		case 37: goto st43;
		case 61: goto st42;
		case 95: goto st42;
		case 126: goto st42;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st42;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st42;
	} else
		goto st42;
	goto st0;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st44;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st44;
	} else
		goto st44;
	goto st0;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st42;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st42;
	} else
		goto st42;
	goto st0;
tr18:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 846 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr30;
		case 33: goto st19;
		case 37: goto st20;
		case 43: goto st45;
		case 58: goto tr61;
		case 59: goto st19;
		case 61: goto st19;
		case 64: goto st26;
		case 95: goto st19;
		case 126: goto st19;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 44 ) {
			if ( 45 <= (*p) && (*p) <= 46 )
				goto st45;
		} else if ( (*p) >= 36 )
			goto st19;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st45;
		} else if ( (*p) >= 65 )
			goto st45;
	} else
		goto st45;
	goto st0;
tr61:
#line 36 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.scheme.assign(mark, p - mark);
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 888 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 33: goto st23;
		case 37: goto st24;
		case 47: goto st47;
		case 61: goto st23;
		case 64: goto st26;
		case 95: goto st23;
		case 126: goto st23;
	}
	if ( (*p) < 58 ) {
		if ( (*p) > 46 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto st36;
		} else if ( (*p) >= 36 )
			goto st23;
	} else if ( (*p) > 59 ) {
		if ( (*p) > 90 ) {
			if ( 97 <= (*p) && (*p) <= 122 )
				goto st23;
		} else if ( (*p) >= 65 )
			goto st23;
	} else
		goto st23;
	goto st0;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
	if ( (*p) == 47 )
		goto st48;
	goto st0;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	switch( (*p) ) {
		case 32: goto tr64;
		case 33: goto tr65;
		case 35: goto tr66;
		case 37: goto tr67;
		case 47: goto tr68;
		case 58: goto tr69;
		case 61: goto tr65;
		case 63: goto tr70;
		case 64: goto tr71;
		case 95: goto tr65;
		case 126: goto tr65;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr65;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr65;
	} else
		goto tr65;
	goto st0;
tr65:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st49;
tr73:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st49;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
#line 970 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr72;
		case 33: goto tr73;
		case 35: goto tr74;
		case 37: goto tr75;
		case 47: goto tr76;
		case 58: goto tr77;
		case 61: goto tr73;
		case 63: goto tr78;
		case 64: goto tr79;
		case 95: goto tr73;
		case 126: goto tr73;
	}
	if ( (*p) < 65 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr73;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr73;
	} else
		goto tr73;
	goto st0;
tr90:
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st50;
tr66:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st50;
tr74:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st50;
tr135:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 32 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.path.assign(mark, p - mark);
}
	goto st50;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
#line 1041 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr80;
		case 33: goto tr81;
		case 37: goto tr82;
		case 61: goto tr81;
		case 95: goto tr81;
		case 126: goto tr81;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto tr81;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr81;
	} else
		goto tr81;
	goto st0;
tr81:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 1069 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr83;
		case 33: goto st51;
		case 37: goto st52;
		case 61: goto st51;
		case 95: goto st51;
		case 126: goto st51;
	}
	if ( (*p) < 63 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st51;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st51;
	} else
		goto st51;
	goto st0;
tr82:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
#line 1097 "src/http_parser/http11_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st53;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st53;
	} else
		goto st53;
	goto st0;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st51;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st51;
	} else
		goto st51;
	goto st0;
tr67:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st54;
tr75:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 1144 "src/http_parser/http11_parser.cpp"
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st55;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st55;
	} else
		goto st55;
	goto st0;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st49;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st49;
	} else
		goto st49;
	goto st0;
tr134:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st56;
tr68:
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
	goto st56;
tr76:
#line 20 "src/http_parser/http11_parser.rl"
	{
  ctx->uri.hostname.assign(mark, p - mark);
}
#line 8 "src/http_parser/http11_parser.rl"
	{
  mark = p;
}
	goto st56;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
#line 1197 "src/http_parser/http11_parser.cpp"
	switch( (*p) ) {
		case 32: goto tr56;
		case 33: goto st56;
		case 35: goto tr90;
		case 37: goto st57;
		case 61: goto st56;
		case 63: goto tr92;
		case 95: goto st56;
		case 126: goto st56;
	}
	if ( (*p) < 64 ) {
		if ( 36 <= (*p) && (*p) <= 59 )
			goto st56;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st56;
	} else
		goto st56;
	goto st0;
tr136:
#line 8 "src/http_parser/http11_parser.rl"
	{
